# AP-Project-Messenger

./: README.md
Client/: CMakeLists.txt  main.cpp
Client/Sources/HeaderFiles/: ChatWindow.h  Client.h  Connection.h  Interface.h  LoginMenu.h
Client/Sources/SourceFiles/: ChatWindow.cpp  ChatWindow.cpp~  Client.cpp  Client.cpp~  Connection.cpp  Interface.cpp  LoginMenu.cpp
Server/: CMakeLists.txt  main.cpp
Server/Sources/HeaderFiles/: Server.h  Server.h~
Server/Sources/SourceFiles/: Server.cpp  Server.cpp~
