cmake_minimum_required(VERSION 3.3)
project(Server)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
set(CMAKE_AUTOMOC ON)
set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(SOURCE_FILES main.cpp Sources/HeaderFiles/Server.h Sources/SourceFiles/Server.cpp)
add_executable(Server ${SOURCE_FILES})
find_package(Qt5Core REQUIRED)
find_package(Qt5Widgets REQUIRED)
find_package(Qt5Gui REQUIRED)
find_package(Qt5Multimedia REQUIRED)
qt5_use_modules(Server Core Widgets Gui Multimedia)
target_link_libraries(Server Qt5::Widgets Qt5::Gui Qt5::Core Qt5::Multimedia)